# supabase-computer-use

./: .dockerignore  .gitignore  Dockerfile  README.md  docker.env  dummy.md  gunicorn.conf.py  main.py  manifest.json  pyproject.toml
api/: gunicorn.conf.py  main.py  tmp.py
api/core/: auth.py  main_router.py
api/models/: find.py
api/scu/: agent_rag.py  computer_use.py  router.py  similarity_search.py  speech_router.py
api/scu/tools/: __init__.py  computer.py
api/utils/: col.py  constants.py  logger.py
api/utils/brave/: __init__.py  client.py  sync.py
api/utils/brave/types/web/: search_result.py
data/: examples.json
docs/: api.md  api_cu.md
extensions/: background.js  content.js  manifest.json  styles.css
extensions/models/: Smiling_Portrait_1123072412.glb
notebooks/: langgraph_agentic_rag.ipynb
notebooks/.ipynb_checkpoints/: langgraph_agentic_rag-checkpoint.ipynb
rag/: agent.py  embed.py  similarity_search.py
rag/brave/: __init__.py  client.py  sync.py
rag/brave/types/: __init__.py
rag/brave/types/web/: search_result.py
scu/: loop.py  supbase.py  utils.py
scu/autopc/actor/: anthropic_actor.py
scu/tools/: computer.py
